Unit tests (#602)
Unit tests and bug fixes:
* reworked book tests to have less redundancy betweeen book classes
* added tests for the Ollivanders2.common package
* deprecated redundant EntityCommon.getItems
* renamed EntityCommon.getRandomParrotColor()
* replaced isNaturalLog() with a static array like we use for chests and doors
* moved potionEffectLevels map to O2Potions from EntityCommon
* fixed bug in the EntityCommon.getRandom functions to handle when the seed is 0
* refactored EntityCommon.isHostile() to be simpler and handle future Mob changes better
* deprecated Ollivanders2Common.stringArrayToString in favor of String.join
* added missing doors/trapdoors to Ollivanders2Common lists
* simplified booleanFromString because it cannot ever fail to parse
* fixed bug in deserializeLocation where it could partially parse a location and think it worked
* removed unused Ollivanders2Common.vectorToSphere